# Sms-CLI-Client

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
app/: config.py  exceptions.py  main.py  request.py  response.py
app/auth/: basic_auth.py
app/http_client/: http_message.py  request.py  schemas.py
app/tests/: conftest.py
app/tests/unit_tests/: test_config.py
app/tests/unit_tests/test_auth/: test_basic_auth.py
app/tests/unit_tests/test_http_client/: test_http_message.py  test_request.py  test_schemas.py
app/tests/unit_tests/test_utils/: test_cli_parser.py  test_console.py
app/utils/: cli_parser.py  console.py  logging.py
