[project]
name = "sms-cli-client"
version = "0.1.0"
description = "CLI client for sending SMS"
authors = [
    {name = "Sergei Vdovenkov",email = "vdovenkov2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
